--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1,97 +1,151 @@
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
-header {
-    text-align: center;
+body {
+  height: 100vh;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  background: #a6c5ec38;
 }
 
+.links,
+.prices,
+.info,
+.site-map {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.links,
+.site-map {
+  height: 50%;
+  list-style: none;
+  color: white;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+a:active {
+  color: #b3c726;
+}
+
+/* NAV */
 .nav-list {
-    background-color: #072F5F;
-    height: 3rem;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    align-items: center;
-    list-style: none;
-    color: white;
+  height: 3rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+  color: white;
+  background-color: #072f5f;
+  box-shadow: inset 0px -2px 10px 0px black;
+  z-index: 1;
 }
 
-.h2 {
-    text-align: center
+/* Header */
+nav + header {
+  height: 10rem;
+  margin-top: -5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: rgb(210, 222, 241);
+  background-image: url(../images/sky.jpg);
+  z-index: -1;
 }
 
-.info img {
-    height: 12rem;
-    width: 18rem;
+/* MAIN */
+/* Header */
+h2 {
+  text-align: center;
+  color: #072f5f;
 }
 
-.price {
-    height: 7rem;
-    width: 7rem;
-    border: 5px solid #072F5F;
-    border-radius: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
+/* Info */
 .info {
-    padding-bottom: 1.5rem;
-    margin: 1rem;
+  padding-bottom: 1.5rem;
+  margin: 1rem;
 }
 
 .info-package {
-    border-bottom: 2px solid #072F5F;
-    padding-bottom: 1rem;
-    margin-bottom: 1rem;
+  border-bottom: 2px solid #072f5f;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
-.footer {
-    border-bottom: 1px solid grey;
-    padding-bottom: 1rem;
-    height: 10rem;
-    background-color: #072F5F;
+.info img {
+  height: 12rem;
+  width: 18rem;
 }
 
+/* Prices */
 .prices {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
-.links, .prices, .info, .site-map {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    align-items: center;
+.price {
+  height: 7rem;
+  width: 7rem;
+  border: 5px solid #072f5f;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.links, .site-map {
-    height: 50%;
-    list-style: none;
-    color: white;
+/* Footer */
+.footer {
+  border-bottom: 1px solid grey;
+  padding-bottom: 1rem;
+  height: 5rem;
+  background-color: #072f5f;
 }
 
 .links a {
-    color: white;
+  color: white;
 }
 
+/* Utility Classes */
 .borderYellow {
-    border-bottom: 2px solid yellow
+  border-bottom: 2px solid yellow;
 }
 
 .borderOrange {
-    border-bottom: 2px solid orange
+  border-bottom: 2px solid orange;
 }
 
 .borderRed {
-    border-bottom: 2px solid red
+  border-bottom: 2px solid red;
 }
 
 .borderGray {
-    border-bottom: 5px solid grey
+  border-bottom: 5px solid grey;
 }
 
 .imgBorder {
-    border: 2px solid #072F5F
+  border: 2px solid #072f5f;
+}
+
+/* Media Queries */
+@media only screen and (max-width: 620px) {
+  nav + header {
+    margin: 0 0 20px 0;
+    padding: 3rem;
+  }
+
+  main header {
+      font-size: 1.2rem;
+      margin-bottom: 30px
+  }
+
 }
