--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -37,30 +37,44 @@ a:active {
   color: #b3c726;
 }
 
+
+/* HEADER SECTION */
+section.header {
+    height: 6rem;
+    margin: 0;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+}
 /* NAV */
 .nav-list {
   height: 3rem;
+  margin: 0;
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   justify-content: space-around;
   align-items: center;
   list-style: none;
   color: white;
-  background-color: #072f5f;
-  box-shadow: inset 0px -2px 10px 0px black;
+  background-color: #07172E;
   z-index: 1;
 }
 
-/* Header */
-nav + header {
-  height: 10rem;
-  margin-top: -5rem;
+
+
+/* Title */
+.title {
+  height: 60px;
+  /* padding: 30px; */
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   color: rgb(210, 222, 241);
   background-image: url(../images/sky.jpg);
+  background-position: right top;
+  background-repeat: repeat;
+  background-size: fill;
   z-index: -1;
 }
 
@@ -96,7 +110,7 @@ h2 {
 .price {
   height: 7rem;
   width: 7rem;
-  border: 5px solid #072f5f;
+  border: 5px solid #b3c726;
   border-radius: 100%;
   display: flex;
   justify-content: center;
@@ -137,15 +151,3 @@ h2 {
 }
 
 /* Media Queries */
-@media only screen and (max-width: 620px) {
-  nav + header {
-    margin: 0 0 20px 0;
-    padding: 3rem;
-  }
-
-  main header {
-      font-size: 1.2rem;
-      margin-bottom: 30px
-  }
-
-}
