--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -39,7 +39,7 @@ a:active {
 
 /* HEADER SECTION */
 section.header {
-  height: 6rem;
+  height: 8rem;
   margin: 0;
   display: flex;
   flex-flow: column nowrap;
@@ -56,26 +56,36 @@ section.header {
   list-style: none;
   color: white;
   background-color: #07172e;
-  z-index: 1;
 }
 
 /* Title */
 .title {
-  height: 60px;
-  /* padding: 30px; */
+  height: 8rem;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   color: rgb(210, 222, 241);
   background-image: url(../images/sky.jpg);
-  background-position: right top;
-  background-repeat: repeat;
-  background-size: fill;
+  background-position: left top;
+  background-repeat: no-repeat;
+  background-size: cover;
   z-index: -1;
 }
 
-/* MAIN */
+/* Footer */
+.footer {
+    border-bottom: 1px solid grey;
+    padding-bottom: 1rem;
+    height: 5rem;
+    background-color: #072f5f;
+  }
+  
+  .links a {
+    color: white;
+  }
+  
+/* Main */
 main {
   margin-top: 2rem;
 }
@@ -118,18 +128,44 @@ h2 {
   align-items: center;
 }
 
-/* Footer */
-.footer {
-  border-bottom: 1px solid grey;
-  padding-bottom: 1rem;
-  height: 5rem;
-  background-color: #072f5f;
+/* Form */
+form {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
 }
 
-.links a {
-  color: white;
+form div {
+    display: flex;
+    flex-direction: column;
+}
+form label {
+    color: #07172e;
+    margin: 5px;
 }
 
+form input, form textarea {
+    margin-bottom: 5px;
+    padding: 8px;
+    border: 1px solid #07172e50;
+    border-radius: 5px;
+    box-shadow: 1px 1px 1px #07172e;
+}
+
+form input::placeholder, form textarea::placeholder{
+    color: #14315a85;
+}
+
+form input:focus, form textarea:focus{
+    outline: none;
+}
+#send-btn {
+    margin-top: 10px;
+    padding: 4px;
+    background: #b4c72693;
+}
 /* Utility Classes */
 .borderYellow {
   border-bottom: 2px solid yellow;
